<resources>
    <string name="app_name">GymBuddy</string>
    <string name="title_activity_planner">PlannerActivity</string>

    <string-array name="routines_array">
        <item>Arnold Press</item>
        <item>Barbell Bench Press</item>
        <item>Barbell Curl</item>
        <item>Bench Dips</item>
        <item>Bicep Cable Curl</item>
        <item>Chest Press</item>
        <item>Decline Crunch</item>
        <item>Dumbbell Bicep Curl</item>
        <item>Front Raises</item>
        <item>Front Squat</item>
        <item>Hanging Leg Raises</item>
        <item>Incline Bench Press</item>
        <item>Lat Pull Down</item>
        <item>Lateral Raises</item>
        <item>Leg Press</item>
        <item>Machine Bench Press</item>
        <item>Machine Crunch</item>
        <item>Rear Delts</item>
        <item>Reverse Crunch</item>
        <item>Romanian Deadlift</item>
        <item>Shoulder Press</item>
        <item>Seated Cable Row</item>
        <item>Triceps Extension</item>
    </string-array>
    <string-array name="weight_array">
        <item>5 Kg</item>
        <item>10 Kg</item>
        <item>15 Kg</item>
        <item>20 Kg</item>
        <item>25 Kg</item>
        <item>30 Kg</item>
        <item>40 Kg</item>
        <item>50 Kg</item>
        <item>60 Kg</item>
        <item>70 Kg</item>
        <item>80 Kg</item>
        <item>90 Kg</item>
        <item>100 Kg</item>
        <item>110 Kg</item>
        <item>120 Kg</item>
        <item>130 Kg</item>
        <item>140 Kg</item>
        <item>150 Kg</item>
    </string-array>
    <integer-array name="sets_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </integer-array>
    <integer-array name="reps_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </integer-array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu_logout">Log out</string>
    <string name="title_activity_testing">TestingActivity</string>
    <string name="action_unregister_listener">Unregister listener</string>
    <string name="action_settings">Settings</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="delete">DELETE</string>
    <string name="set">Set 1</string>
    <string name="rep">Rep 0</string>
    <string name="reps_remaining">Reps Remaining</string>
    <string name="weight_logo">Weight logo</string>
    <string name="no_records">No Records</string>
    <string name="rep_counter">Rep Counter</string>
    <string name="workout_planner">Workout Planner</string>
    <string name="title_activity_maps">Map</string>
    <string name="gyms_nearby">Gyms Nearby</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="weight_history">Weight History</string>
    <string name="routine_s_lookup">Routine\'s Lookup</string>
    <string name="leaderboard">Leaderboard</string>
</resources>
