<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="192dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="255dp" />

    <Button
        android:id="@+id/btnPlanner"
        android:layout_width="164dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="93dp"
        android:layout_marginBottom="72dp"
        android:onClick="buttonListener"
        android:text="@string/workout_planner"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRepCounter"
        android:layout_width="164dp"
        android:layout_height="86dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="74dp"
        android:onClick="buttonListener"
        android:text="@string/rep_counter"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMap"
        android:layout_width="164dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="231dp"
        android:onClick="buttonListener"
        android:text="@string/gyms_nearby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAvatar"
        android:layout_width="164dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="231dp"
        android:onClick="buttonListener"
        android:text="@string/routine_s_lookup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWeightHistory"
        android:layout_width="164dp"
        android:layout_height="86dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="15dp"
        android:onClick="buttonListener"
        android:text="@string/weight_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMap"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLeaderboard"
        android:layout_width="164dp"
        android:layout_height="86dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="15dp"
        android:onClick="buttonListener"
        android:text="@string/leaderboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnMap"
        app:layout_constraintTop_toTopOf="parent" />
    <!--<Button-->
        <!--android:id="@+id/btnTest"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:onClick="buttonListener"-->
        <!--android:text="Rep Counter"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/guideline2" />-->
</android.support.constraint.ConstraintLayout>