<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaderBoardActivity">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/firebase_lockup_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="131dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="131dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldEmail" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="131dp"
        android:onClick="buttonListener"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="131dp"
        android:onClick="buttonListener"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldPassword" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="266dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="275dp"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="358dp" />

</android.support.constraint.ConstraintLayout>
