<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="317dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="131dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="131dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldEmail" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="131dp"
        android:onClick="buttonListener"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldPassword" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="131dp"
        android:onClick="buttonListener"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="266dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="275dp"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="358dp" />

</android.support.constraint.ConstraintLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin">-->


    <!--<ImageView-->
        <!--android:id="@+id/icon"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
        <!--android:src="@drawable/firebase_lockup_400" />-->

    <!--<LinearLayout-->
        <!--android:id="@+id/layoutEmailPassword"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/icon"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:orientation="horizontal">-->

        <!--<EditText-->
            <!--android:id="@+id/fieldEmail"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:ellipsize="end"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:hint="@string/hint_email"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:maxLines="1" />-->

        <!--<EditText-->
            <!--android:id="@+id/fieldPassword"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:ellipsize="end"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:hint="@string/hint_password"-->
            <!--android:inputType="textPassword"-->
            <!--android:maxLines="1" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:id="@+id/layoutButtons"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/layoutEmailPassword"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:orientation="horizontal">-->

        <!--<Button-->
            <!--android:id="@+id/btnSignIn"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:onClick="buttonListener"-->
            <!--android:text="@string/sign_in" />-->

        <!--<Button-->
            <!--android:id="@+id/btnSignUp"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:onClick="buttonListener"-->
            <!--android:text="@string/sign_up" />-->
    <!--</LinearLayout>-->

<!--</RelativeLayout>-->
